--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,11 @@
-#hud {
-	padding-top:10px;
+#incorrect {
 	position:fixed;
-	padding:auto;
+	left:25%;
+}
+
+#timer {
+	position:fixed;
+	right:25%;
 }
 
 #word {
@@ -25,4 +29,8 @@ h1 {
 	font-size: 8em;
 }
 
-
+@media only screen and (max-width: 565px) {
+	h1 { 
+		font-size: 5em; 
+	}
+}
